crates/ffai-kernels-codegen/tests/snapshots/msl_snapshots__cast_chain_default_config.snap
---
source: crates/ffai-kernels-codegen/tests/msl_snapshots.rs
expression: msl
---
// Generated by FFAI Kernels
#include <metal_stdlib>
using namespace metal;

kernel void cast_chain(
    const device float *x [[buffer(0)]],
    device float *out [[buffer(1)]],
    uint tid [[thread_position_in_grid]]
) {
    uint v0 = tid;
    auto v1 = x[v0];
    auto v4 = static_cast<float>(bfloat(static_cast<half>(v1)));
    out[v0] = v4;
}
