crates/ffai-kernels-codegen/tests/snapshots/msl_snapshots__reduction_sum_snapshot_default.snap
---
source: crates/ffai-kernels-codegen/tests/msl_snapshots.rs
expression: msl
---
// Generated by MetalTile
#include <metal_stdlib>
using namespace metal;

kernel void reduction_smoke(
    const device float *x [[buffer(0)]],
    device float *out [[buffer(1)]],
    uint3 _tgid3 [[threadgroup_position_in_grid]],
    uint3 _lsize3 [[threads_per_threadgroup]],
    uint simd_lane [[thread_index_in_simdgroup]],
    uint simd_group [[simdgroup_index_in_threadgroup]]
) {
    uint tgid_x = _tgid3.x;
    uint lsize  = _lsize3.x;
    uint n_simd = lsize / 32u;
    if (n_simd == 0u) { return; }
    threadgroup float v2_sg[32];

    uint v0 = tgid_x;
    auto v1 = x[v0];
    float v2;
    {
        float _sv = simd_sum(float(v1));
        if (simd_lane == 0) v2_sg[simd_group] = _sv;
        threadgroup_barrier(mem_flags::mem_threadgroup);
        if (simd_group == 0) {
            float _wv = simd_lane < n_simd ? v2_sg[simd_lane] : 0.0f;
            v2_sg[0] = simd_sum(_wv);
        }
        threadgroup_barrier(mem_flags::mem_threadgroup);
        v2 = v2_sg[0];
    }
    out[v0] = v2;
}
